feat: sticky side and cache category list

--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "web3": "^1.7.3"
   },
   "scripts": {
-    "start": "PORT=7777 craco start",
-    "build": "craco build",
+    "start": "PORT=7777 REACT_APP_NODE_ENV=test craco start",
+    "build": "REACT_APP_NODE_ENV=production craco build",
     "build:test": "REACT_APP_NODE_ENV=test craco build",
     "test": "craco test",
     "eject": "craco eject",
