--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.27.2",
     "craco-alias": "^3.0.1",
     "craco-less": "2.1.0-alpha.0",
+    "cross-env": "^7.0.3",
     "i18next": "^21.9.1",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
@@ -36,9 +37,9 @@
     "web3": "^1.7.3"
   },
   "scripts": {
-    "start": "PORT=7777 REACT_APP_NODE_ENV=test craco start",
-    "build": "REACT_APP_NODE_ENV=production craco build",
-    "build:test": "REACT_APP_NODE_ENV=test craco build",
+    "start": "cross-env PORT=7777 REACT_APP_NODE_ENV=test craco start",
+    "build": "cross-env REACT_APP_NODE_ENV=production craco build",
+    "build:test": "cross-env REACT_APP_NODE_ENV=test craco build",
     "test": "craco test",
     "eject": "craco eject",
     "css": "npx tailwindcss -i ./src/styles/tailwindcss.css -o ./src/styles/global.css --watch"
